build: update Dockerfile to install ImageMagick